[package]
name = "chartsapi-rs"
version = "0.1.1"
edition = "2024"

[features]
default = ["mcp"]
mcp = ["rmcp", "tokio-util"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
quick-xml = { version = "0.37.4", features = ["serialize"] }
reqwest = { version = "0.12.15" }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.97"
axum = "0.8.3"
indexmap = { version = "2.8.0", features = ["serde"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
chrono = "0.4.40"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk/", features = [
    "server",
    "transport-sse-server",
    "transport-io",
], optional = true }
tokio-util = { version = "0.7.14", optional = true }
